fix safari white lines

--- a/front-end/Assets/src/css/orion/_orion-calculator.scss
+++ b/front-end/Assets/src/css/orion/_orion-calculator.scss
@@ -482,19 +482,19 @@
 			  & > span.prod {
 				  background-color: #BDBDBD;
 				  
-				  background-image:linear-gradient(90deg, transparent, transparent calc((100% / 13 * 1) - 2px), white calc(100% / 13 * 1), transparent calc(100% / 13 * 1)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 13 * 2) - 2px), white calc(100% / 13 * 2), transparent calc(100% / 13 * 2)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 13 * 3) - 2px), white calc(100% / 13 * 3), transparent calc(100% / 13 * 3)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 13 * 4) - 2px), white calc(100% / 13 * 4), transparent calc(100% / 13 * 4)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 13 * 5) - 2px), white calc(100% / 13 * 5), transparent calc(100% / 13 * 5)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 13 * 6) - 2px), white calc(100% / 13 * 6), transparent calc(100% / 13 * 6)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 13 * 7) - 2px), white calc(100% / 13 * 7), transparent calc(100% / 13 * 7)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 13 * 8) - 2px), white calc(100% / 13 * 8), transparent calc(100% / 13 * 8)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 13 * 9) - 2px), white calc(100% / 13 * 9), transparent calc(100% / 13 * 9)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 13 * 10) - 2px), white calc(100% / 13 * 10), transparent calc(100% / 13 * 10)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 13 * 11) - 2px), white calc(100% / 13 * 11), transparent calc(100% / 13 * 11)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 13 * 12) - 2px), white calc(100% / 13 * 12), transparent calc(100% / 13 * 12)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 13 * 13) - 2px), white calc(100% / 13 * 13), transparent calc(100% / 13 * 13))
+				  background-image:linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 13 * 1) - 2px), white calc(100% / 13 * 1), rgba(255,255,255,0) calc(100% / 13 * 1)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 13 * 2) - 2px), white calc(100% / 13 * 2), rgba(255,255,255,0) calc(100% / 13 * 2)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 13 * 3) - 2px), white calc(100% / 13 * 3), rgba(255,255,255,0) calc(100% / 13 * 3)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 13 * 4) - 2px), white calc(100% / 13 * 4), rgba(255,255,255,0) calc(100% / 13 * 4)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 13 * 5) - 2px), white calc(100% / 13 * 5), rgba(255,255,255,0) calc(100% / 13 * 5)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 13 * 6) - 2px), white calc(100% / 13 * 6), rgba(255,255,255,0) calc(100% / 13 * 6)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 13 * 7) - 2px), white calc(100% / 13 * 7), rgba(255,255,255,0) calc(100% / 13 * 7)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 13 * 8) - 2px), white calc(100% / 13 * 8), rgba(255,255,255,0) calc(100% / 13 * 8)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 13 * 9) - 2px), white calc(100% / 13 * 9), rgba(255,255,255,0) calc(100% / 13 * 9)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 13 * 10) - 2px), white calc(100% / 13 * 10), rgba(255,255,255,0) calc(100% / 13 * 10)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 13 * 11) - 2px), white calc(100% / 13 * 11), rgba(255,255,255,0) calc(100% / 13 * 11)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 13 * 12) - 2px), white calc(100% / 13 * 12), rgba(255,255,255,0) calc(100% / 13 * 12)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 13 * 13) - 2px), white calc(100% / 13 * 13), rgba(255,255,255,0) calc(100% / 13 * 13))
 				  ;
 				  -webkit-transform: translate3d(0, 0, 0);
 				  transform: translate3d(0, 0, 0);
@@ -521,44 +521,44 @@
 				& > span.nonProd {
 				  background-color: #BDBDBD;
 				  
-				  background-image:  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 1) - 2px), white calc(100% / 38 * 1), transparent calc(100% / 38 * 1)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 2) - 2px), white calc(100% / 38 * 2), transparent calc(100% / 38 * 2)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 3) - 2px), white calc(100% / 38 * 3), transparent calc(100% / 38 * 3)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 4) - 2px), white calc(100% / 38 * 4), transparent calc(100% / 38 * 4)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 5) - 2px), white calc(100% / 38 * 5), transparent calc(100% / 38 * 5)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 6) - 2px), white calc(100% / 38 * 6), transparent calc(100% / 38 * 6)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 7) - 2px), white calc(100% / 38 * 7), transparent calc(100% / 38 * 7)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 8) - 2px), white calc(100% / 38 * 8), transparent calc(100% / 38 * 8)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 9) - 2px), white calc(100% / 38 * 9), transparent calc(100% / 38 * 9)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 10) - 2px), white calc(100% / 38 * 10), transparent calc(100% / 38 * 10)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 11) - 2px), white calc(100% / 38 * 11), transparent calc(100% / 38 * 11)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 12) - 2px), white calc(100% / 38 * 12), transparent calc(100% / 38 * 12)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 13) - 2px), white calc(100% / 38 * 13), transparent calc(100% / 38 * 13)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 14) - 2px), white calc(100% / 38 * 14), transparent calc(100% / 38 * 14)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 15) - 2px), white calc(100% / 38 * 15), transparent calc(100% / 38 * 15)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 16) - 2px), white calc(100% / 38 * 16), transparent calc(100% / 38 * 16)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 17) - 2px), white calc(100% / 38 * 17), transparent calc(100% / 38 * 17)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 18) - 2px), white calc(100% / 38 * 18), transparent calc(100% / 38 * 18)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 19) - 2px), white calc(100% / 38 * 19), transparent calc(100% / 38 * 19)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 20) - 2px), white calc(100% / 38 * 20), transparent calc(100% / 38 * 20)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 21) - 2px), white calc(100% / 38 * 21), transparent calc(100% / 38 * 21)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 22) - 2px), white calc(100% / 38 * 22), transparent calc(100% / 38 * 22)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 23) - 2px), white calc(100% / 38 * 23), transparent calc(100% / 38 * 23)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 24) - 2px), white calc(100% / 38 * 24), transparent calc(100% / 38 * 24)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 25) - 2px), white calc(100% / 38 * 25), transparent calc(100% / 38 * 25)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 26) - 2px), white calc(100% / 38 * 26), transparent calc(100% / 38 * 26)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 27) - 2px), white calc(100% / 38 * 27), transparent calc(100% / 38 * 27)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 28) - 2px), white calc(100% / 38 * 28), transparent calc(100% / 38 * 28)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 29) - 2px), white calc(100% / 38 * 29), transparent calc(100% / 38 * 29)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 30) - 2px), white calc(100% / 38 * 30), transparent calc(100% / 38 * 30)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 31) - 2px), white calc(100% / 38 * 31), transparent calc(100% / 38 * 31)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 32) - 2px), white calc(100% / 38 * 32), transparent calc(100% / 38 * 32)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 33) - 2px), white calc(100% / 38 * 33), transparent calc(100% / 38 * 33)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 34) - 2px), white calc(100% / 38 * 34), transparent calc(100% / 38 * 34)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 35) - 2px), white calc(100% / 38 * 35), transparent calc(100% / 38 * 35)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 36) - 2px), white calc(100% / 38 * 36), transparent calc(100% / 38 * 36)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 37) - 2px), white calc(100% / 38 * 37), transparent calc(100% / 38 * 37)),
-				  linear-gradient(90deg, transparent, transparent calc((100% / 38 * 38) - 2px), white calc(100% / 38 * 38), transparent calc(100% / 38 * 38))
+				  background-image:  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 1) - 2px), white calc(100% / 38 * 1), rgba(255,255,255,0) calc(100% / 38 * 1)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 2) - 2px), white calc(100% / 38 * 2), rgba(255,255,255,0) calc(100% / 38 * 2)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 3) - 2px), white calc(100% / 38 * 3), rgba(255,255,255,0) calc(100% / 38 * 3)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 4) - 2px), white calc(100% / 38 * 4), rgba(255,255,255,0) calc(100% / 38 * 4)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 5) - 2px), white calc(100% / 38 * 5), rgba(255,255,255,0) calc(100% / 38 * 5)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 6) - 2px), white calc(100% / 38 * 6), rgba(255,255,255,0) calc(100% / 38 * 6)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 7) - 2px), white calc(100% / 38 * 7), rgba(255,255,255,0) calc(100% / 38 * 7)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 8) - 2px), white calc(100% / 38 * 8), rgba(255,255,255,0) calc(100% / 38 * 8)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 9) - 2px), white calc(100% / 38 * 9), rgba(255,255,255,0) calc(100% / 38 * 9)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 10) - 2px), white calc(100% / 38 * 10), rgba(255,255,255,0) calc(100% / 38 * 10)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 11) - 2px), white calc(100% / 38 * 11), rgba(255,255,255,0) calc(100% / 38 * 11)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 12) - 2px), white calc(100% / 38 * 12), rgba(255,255,255,0) calc(100% / 38 * 12)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 13) - 2px), white calc(100% / 38 * 13), rgba(255,255,255,0) calc(100% / 38 * 13)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 14) - 2px), white calc(100% / 38 * 14), rgba(255,255,255,0) calc(100% / 38 * 14)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 15) - 2px), white calc(100% / 38 * 15), rgba(255,255,255,0) calc(100% / 38 * 15)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 16) - 2px), white calc(100% / 38 * 16), rgba(255,255,255,0) calc(100% / 38 * 16)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 17) - 2px), white calc(100% / 38 * 17), rgba(255,255,255,0) calc(100% / 38 * 17)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 18) - 2px), white calc(100% / 38 * 18), rgba(255,255,255,0) calc(100% / 38 * 18)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 19) - 2px), white calc(100% / 38 * 19), rgba(255,255,255,0) calc(100% / 38 * 19)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 20) - 2px), white calc(100% / 38 * 20), rgba(255,255,255,0) calc(100% / 38 * 20)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 21) - 2px), white calc(100% / 38 * 21), rgba(255,255,255,0) calc(100% / 38 * 21)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 22) - 2px), white calc(100% / 38 * 22), rgba(255,255,255,0) calc(100% / 38 * 22)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 23) - 2px), white calc(100% / 38 * 23), rgba(255,255,255,0) calc(100% / 38 * 23)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 24) - 2px), white calc(100% / 38 * 24), rgba(255,255,255,0) calc(100% / 38 * 24)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 25) - 2px), white calc(100% / 38 * 25), rgba(255,255,255,0) calc(100% / 38 * 25)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 26) - 2px), white calc(100% / 38 * 26), rgba(255,255,255,0) calc(100% / 38 * 26)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 27) - 2px), white calc(100% / 38 * 27), rgba(255,255,255,0) calc(100% / 38 * 27)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 28) - 2px), white calc(100% / 38 * 28), rgba(255,255,255,0) calc(100% / 38 * 28)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 29) - 2px), white calc(100% / 38 * 29), rgba(255,255,255,0) calc(100% / 38 * 29)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 30) - 2px), white calc(100% / 38 * 30), rgba(255,255,255,0) calc(100% / 38 * 30)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 31) - 2px), white calc(100% / 38 * 31), rgba(255,255,255,0) calc(100% / 38 * 31)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 32) - 2px), white calc(100% / 38 * 32), rgba(255,255,255,0) calc(100% / 38 * 32)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 33) - 2px), white calc(100% / 38 * 33), rgba(255,255,255,0) calc(100% / 38 * 33)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 34) - 2px), white calc(100% / 38 * 34), rgba(255,255,255,0) calc(100% / 38 * 34)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 35) - 2px), white calc(100% / 38 * 35), rgba(255,255,255,0) calc(100% / 38 * 35)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 36) - 2px), white calc(100% / 38 * 36), rgba(255,255,255,0) calc(100% / 38 * 36)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 37) - 2px), white calc(100% / 38 * 37), rgba(255,255,255,0) calc(100% / 38 * 37)),
+				  linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,0) calc((100% / 38 * 38) - 2px), white calc(100% / 38 * 38), rgba(255,255,255,0) calc(100% / 38 * 38))
 				  
 				  ;
 				  -webkit-transform: translate3d(0, 0, 0);
