fixing safari crossbrowser issue with datalist

--- a/front-end/Assets/src/css/orion/_orion-calculator.scss
+++ b/front-end/Assets/src/css/orion/_orion-calculator.scss
@@ -419,14 +419,16 @@
 	.slidecontainer {
 		width: 100%;
 		
-		datalist {
+		.steplist {
 			display: flex;
 			width: 100%;
 			justify-content: space-between;
 			font-size: 14px;
 			overflow: hidden;
 			font-weight: 700;
-			option {
+			margin-top: -20px;
+			
+			& > span {
 				width: 2ex;
 				display: flex;
 				justify-content: center;
