--- a/front-end/Assets/src/css/orion/_orion-calculator.scss
+++ b/front-end/Assets/src/css/orion/_orion-calculator.scss
@@ -289,6 +289,9 @@
 					p{
 						font-size: 14px;
 						margin-bottom: 10px;
+						&.disclaimer {
+							font-size: 12px;
+						}
 					}
 					#tallyCustom {
 						display: none;
