--- a/front-end/Assets/src/css/orion/_orion-global.scss
+++ b/front-end/Assets/src/css/orion/_orion-global.scss
@@ -124,7 +124,7 @@
         }
         .image-modal-overlay {
             position: absolute;
-            right: 0;
+            right: 20px;
             bottom: 0px;
             display: block;
             text-align: center;
