--- a/front-end/Assets/src/css/orion/_orion-pricing.scss
+++ b/front-end/Assets/src/css/orion/_orion-pricing.scss
@@ -17,6 +17,7 @@
     padding: 38px 25px;
     border: 1px solid #1A98FF;
     margin: 0px 0px 20px 0px;
+    width: 100%;
     @media(min-width:$break-sm){
         margin: 0px 15px 0px 15px;
     }
