--- a/front-end/Assets/src/css/orion/_orion-split-components.scss
+++ b/front-end/Assets/src/css/orion/_orion-split-components.scss
@@ -20,6 +20,7 @@
         background-position: center 70%;
         background-size: 550px;
         text-align: center;
+        width: 100%;
         @media only screen and (min-width:0) and (max-width: 360px) {
             background-size: 450px;
         }
@@ -53,6 +54,7 @@
             }
         } 
         .imageContainer-no-cloud-bg {
+            width: 100%;
             @media(min-width:$break-lg){            
                 margin-left: auto;
             }
