--- a/front-end/Assets/src/css/orion/_orion-pricing.scss
+++ b/front-end/Assets/src/css/orion/_orion-pricing.scss
@@ -1,10 +1,12 @@
 // Pricing cards
 .pricing-section{
     background-image: url(#{$imagesFolder}orion/portalcards-bg.svg);
-    background-size: cover;
+    background-size: contain;
     background-position: center top;
     background-repeat: no-repeat;
-    
+    @media(min-width:$break-sm){
+        background-size: cover;
+    }
     .div-px1{
         @media(max-width:641px){
             margin: 0;
