--- a/front-end/Assets/src/css/orion/_orion-video-portal.scss
+++ b/front-end/Assets/src/css/orion/_orion-video-portal.scss
@@ -76,6 +76,7 @@
 .orion-page-fancybox{
     .fancybox-close{
         background-image: url(#{$imagesFolder}orion/plus-close-circle-blue.svg);
+        background-size: auto;
         &:hover{
             background-image: url(#{$imagesFolder}orion/plus-close-circle-orangegradient.svg);
         }
