--- a/front-end/Assets/src/css/orion/_orion-split-components.scss
+++ b/front-end/Assets/src/css/orion/_orion-split-components.scss
@@ -21,6 +21,11 @@
         background-size: 550px;
         text-align: center;
         width: 100%;
+        max-width: 560px;
+        @media(min-width:$break-lg){            
+            max-width: auto;
+
+        }
         @media only screen and (min-width:0) and (max-width: 360px) {
             background-size: 450px;
         }
