--- a/front-end/Assets/src/css/orion/_orion-split-components.scss
+++ b/front-end/Assets/src/css/orion/_orion-split-components.scss
@@ -22,7 +22,12 @@
 		padding: 60px 0px;
 		background-position:center 75%;
 		background-size:120%; 
-		text-align: center;
+        text-align: center;
+        max-width: 560px;
+       @media(min-width:$break-lg){            
+           max-width: auto;
+
+       }
 		@media only screen and (min-width:830px) and (max-width: 960px){ 
 			background-position:center 90%;
 		}
