--- a/front-end/Assets/src/css/orion/_orion-split-components.scss
+++ b/front-end/Assets/src/css/orion/_orion-split-components.scss
@@ -25,7 +25,7 @@
         text-align: center;
         max-width: 560px;
        @media(min-width:$break-lg){            
-           max-width: auto;
+           max-width: none;
 
        }
 		@media only screen and (min-width:830px) and (max-width: 960px){ 
@@ -43,7 +43,7 @@
 //        width: 100%;
 //        max-width: 560px;
 //        @media(min-width:$break-lg){            
-//            max-width: auto;
+//            max-width: none;
 //
 //        }
 //        @media only screen and (min-width:0) and (max-width: 360px) {
