--- a/front-end/Assets/src/css/orion/_orion-calculator.scss
+++ b/front-end/Assets/src/css/orion/_orion-calculator.scss
@@ -401,6 +401,10 @@
 				vertical-align: middle;
     			margin-right: 10px;				
 			}
+			&:hover{
+				background-color: #1A98FF;
+				border-color:#1A98FF;
+			}
 		}
 		.edit-btn {
 			color: #1A98FF;
