--- a/front-end/Assets/src/support-central-angular/src/app/support-questions/support-questions.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/support-questions/support-questions.component.html
@@ -1,7 +1,7 @@
 <div class="extended-widget-container">
     <div class="extended-widget-header">
         <div class="top-section">
-            <h2>Common Support Questions</h2>
+            <h2>Frequently asked questions</h2>
             <a class="external-app-link btn btn-primary" [href]="widgets.supportQuestionUrl" target="_blank">Ask the Community</a>
         </div>
         <div class="description">FAQ about support central</div>
