--- a/front-end/Assets/src/support-central-angular/src/app/community/community.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/community/community.component.html
@@ -2,9 +2,9 @@
     <div class="extended-widget-header">
         <div class="top-section">
             <h2>Ask The Community</h2>
-            <a class="external-app-link btn btn-primary" [href]="widgets.askCommunity" target="_blank">Go to the Communities</a>
+            <a class="external-app-link btn btn-primary" [href]="widgets.askCommunity" target="_blank">Go to the Community</a>
         </div>
-        <div class="description">Suggested answered questions, ideas, documents and blogs based on your favorite products and recent activity</div>
+        <div class="description">{{widgetDescription}}</div>
     </div>
     <div class="extended-widget-body" [ngBusy]="communityService.busyConfig">
         <adapt-accordion>
