--- a/front-end/Assets/src/support-central-angular/src/app/tile-ver3/tile.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/tile-ver3/tile.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="tile-center">
           <h3>{{widget.title}}</h3>
-          <div>{{widget.description}}</div>
+          <!-- <div>{{widget.description}}</div> -->
         </div>
       </div>
       <div class="bottom">
@@ -29,7 +29,7 @@
         </div>
         <div class="tile-center">
           <h3>{{widget.title}}</h3>
-          <div>{{widget.description}}</div>
+          <!-- <div>{{widget.description}}</div> -->
         </div>
       </div>
       <div class="bottom">
