--- a/front-end/Assets/src/css/modules/_webinars.scss
+++ b/front-end/Assets/src/css/modules/_webinars.scss
@@ -105,7 +105,7 @@
         .resource-hub-trials-cards {
             ol {
                 li{
-                    @media (max-width: $break-md) {
+                    @media (max-width: 959px) {
                         float: none;
                     }
                 }
@@ -114,3 +114,5 @@
         
                 
 }
+
+
